Fixed menu position on mobile.

--- a/themes/botwiki/src/styles/style.2.25.less
+++ b/themes/botwiki/src/styles/style.2.25.less
@@ -744,7 +744,7 @@ img.logo-digitalocean{
     background: #fff;
     border: 5px solid #444;
     left: -100px;
-    top: 100px;
+    top: 90px;
     width: 100%;
     z-index: 9999;
     transition: all 0.2s;
